用户前端优化: 导航栏样式、预订页面布局、个人中心界面美化